# expense-checker

./: .gitignore  LICENSE  README.md  pyproject.toml
src/expense_checker/: tools.py
src/tools/: main.py
